--- a/Skinfile-Generator/index.html
+++ b/Skinfile-Generator/index.html
@@ -34,7 +34,7 @@
     <!-- Navigator -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom shadow-sm px-lg-5 stricky-top">
       <p class="navbar-brand mb-0">
-        <a href="http://skimit.world" target="_blank"><img src="https://max-xiaokui.github.io/title.ico" width="32" height="32" class="d-inline-block align-top rounded-circle mr-1" alt="">
+        <a href="../" target="_blank"><img src="../images/title.ico" width="32" height="32" class="d-inline-block align-top rounded-circle mr-1" alt="">
         <span>skimit</span></a>
       </p>
       <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -133,7 +133,7 @@
 			<div class="text-white-50 text-center py-2">
 				<div class="row m-0">
 					<div class="col-4">
-						<small><img src="https://max-xiaokui.github.io/title.ico" width="32" height="32" class="d-inline-block align-top rounded-circle mr-1" alt=""><u><a href="http://skimit.world" target="_blank">skimit服务器</a></u></small>
+						<small><img src="../images/title.ico" width="32" height="32" class="d-inline-block align-top rounded-circle mr-1" alt=""><u><a href="http://skimit.world" target="_blank">skimit服务器</a></u></small>
 					</div>
 					<div class="col-4">
 						<small><i class="fas fa-broadcast-tower"></i> Powered by <u><a href="https://MAX_XiaoKui.github.io" target="_blank">MAX_XiaoKui.github.io</a></u></small>
